--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "commit": "cz"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.21.0",
@@ -25,6 +26,8 @@
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.1",
     "autoprefixer": "^10.4.14",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.23",
     "preact": "^10.13.2",
@@ -32,5 +35,10 @@
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
