--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "commit": "cz"
+    "commit": "cz",
+    "create": "node ./scripts/create.js",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.21.0",
@@ -31,10 +35,12 @@
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.23",
     "preact": "^10.13.2",
+    "prompt": "^1.3.0",
     "sass": "^1.62.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vitepress": "1.0.0-alpha.75"
   },
   "config": {
     "commitizen": {
