--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     }
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "react-popper": "^2.3.0",
     "vite-project": "link:"
   }
 }
