--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@preact/preset-vite": "^2.5.0",
+    "@testing-library/preact": "^3.2.3",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.1",
     "autoprefixer": "^10.4.14",
@@ -35,10 +36,10 @@
     "cz-conventional-changelog": "^3.3.0",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.23",
-    "preact": "^10.13.2",
+    "preact": "^10.15.0",
     "prompt": "^1.3.0",
     "sass": "^1.62.0",
-    "tailwindcss": "^3.3.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vitepress": "1.0.0-alpha.75"
