--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "commit": "cz",
-    "create": "node ./scripts/create.js",
+    "ce": "node run-script/create.js",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
@@ -52,6 +52,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.24.0",
     "bem-classnames": "^1.0.7",
+    "chalk": "^5.2.0",
     "vite-project": "link:"
   }
 }
